--- a/about.html
+++ b/about.html
@@ -2,34 +2,26 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Glob Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="about.css">
   </head>
   <body>
     <div class="banner">
       <div class="navbar">
-        <img src="images/globe-grid.png" alt="logo">
+        <a href="index.html"><img src="images/globe-grid.png" alt="logo"></a>
         <ul>
           <li><a href="product.html">Product</a></li>
           <li><a href="pricing.html">Pricing</a></li>
           <li><a href="affiliate.html">Affliliate</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
 
       <div class="content">
-        <div class="title">
-          Make Website
-          <div class="slider">
-            <div>Now!</div>
-            <div>Today!</div>
-            <div>With Glob Web!</div>
-          </div>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
-        <button type="button" name="button">Register Now To Know More</button>
+        
       </div>
 
     </div>
