--- a/pricing.html
+++ b/pricing.html
@@ -2,17 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Glob Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Prices</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div class="banner">
       <div class="navbar">
-        <img src="images/globe-grid.png" alt="logo">
+        <a href="index.html"><img src="images/globe-grid.png" alt="logo"></a>
         <ul>
           <li><a href="product.html">Product</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
+          <li><a href="#">Pricing</a></li>
           <li><a href="affiliate.html">Affliliate</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -25,7 +25,7 @@
           <div class="slider">
             <div>Now!</div>
             <div>Today!</div>
-            <div>With Glob Web!</div>
+            <div>Free!</div>
           </div>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
